@@ -1,6 +1,7 @@
-2011-06-28  0.32  H.Merijn Brand
+2011-08-09  0.32  H.Merijn Brand
 
     * TYPE should be numeric
+    * Added tests for return count of delete statements in do
 
 2010-09-18  0.31  H.Merijn Brand
 
